Fixed border radius for team photo on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -306,8 +306,6 @@ body.about main.template6 {
   }
 
   #about-wrapper .team-photo {
-    padding: 0 4rem;
-    margin-bottom: 2rem;
     margin: auto;
   }
 
